--- a/css/index.css
+++ b/css/index.css
@@ -84,6 +84,18 @@ a {
     margin-top: 40px;
     color: #0033cc;
     font-size: 18px;
+}
+
+.menu.open span:nth-of-type(1) {
+  top: 14px;
+  transform: rotate(45deg);
+}
+.menu.open span:nth-of-type(2) {
+  opacity: 0;
+}
+.menu.open span:nth-of-type(3) {
+  top: 14px;
+  transform: rotate(-45deg);
 }}
 
 .header {
