--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,11 @@ a {
 }
 
 @media screen and (max-width: 768px) {
+
+  .header__nav{
+    display: none;
+  }
+
   .menu {
     display: inline-block;
     width: 36px;
@@ -80,7 +85,7 @@ a {
     width: 100%;
     top: 0;
     left: -100%;
-    background: black;
+    background: white;
     transition: 0.7s;
   }
 
@@ -106,6 +111,10 @@ a {
     top: 14px;
     transform: rotate(-45deg);
   }
+
+  .in{
+  transform: translateX(100%);
+}
 }
 
 .header {
