--- a/css/recruit.css
+++ b/css/recruit.css
@@ -2,9 +2,22 @@
   box-sizing: border-box;
 }
 
-a {
+.section__news__item__link{
   color: black;
   text-decoration: none;
+}
+
+.link {
+  color: black;
+  text-decoration: none;
+}
+
+.link:hover {
+  color: rgb(99, 99, 99);
+}
+
+.section__menu-color-white {
+  color: #fff;
 }
 
 .btn {
@@ -16,6 +29,105 @@ a {
   padding: 10px;
   background-color: rgb(189, 18, 18);
   color: white;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: rgb(238, 103, 103);
+  color: #fff;
+}
+
+.drawer-nav {
+    display: none;
+  }
+
+  .menu{
+    display: none;
+  }
+
+@media screen and (max-width: 768px) {
+  .header__nav {
+    display: none;
+  }
+
+  .menu {
+    display: inline-block;
+    width: 36px;
+    height: 32px;
+    cursor: pointer;
+    position: relative;
+    z-index: 10;
+  }
+
+  .menu-line-bottom {
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    background-color: #000;
+    position: absolute;
+    transition: 0.5s;
+    bottom: 0;
+  }
+
+  .menu-line-top {
+    top: 0;
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    background-color: #000;
+    position: absolute;
+    transition: 0.5s;
+    bottom: 0;
+  }
+
+  .menu-line-middle {
+    top: 14px;
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    background-color: #000;
+    position: absolute;
+    transition: 0.5s;
+    bottom: 0;
+  }
+
+  .drawer-nav {
+    display: block;
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: -100%;
+    background: white;
+    transition: 0.7s;
+  }
+
+  .drawer-nav-list {
+    padding-top: 80px;
+    text-align: center;
+  }
+
+  .drawer-nav-item {
+    margin-top: 40px;
+    color: #0033cc;
+    font-size: 18px;
+  }
+
+  .menu.open span:nth-of-type(1) {
+    top: 14px;
+    transform: rotate(45deg);
+  }
+  .menu.open span:nth-of-type(2) {
+    opacity: 0;
+  }
+  .menu.open span:nth-of-type(3) {
+    top: 14px;
+    transform: rotate(-45deg);
+  }
+
+  .in {
+    transform: translateX(100%);
+  }
 }
 
 .header {
@@ -23,7 +135,31 @@ a {
   justify-content: space-between;
   align-items: center;
   height: 70px;
-  padding: 0 30px;
+  background-color: #fff;
+  position: sticky;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+
+.header__title {
+  display: inline-block;
+  padding: 5px;
+  margin: 5px;
+  font-size: 30px;
+}
+
+.header__tittle__list__item {
+  display: inline-block;
+  padding: 5px 5px;
+  font-size: 15px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 70px;
   background-color: #fff;
   position: sticky;
   left: 0;
