--- a/css/blog.css
+++ b/css/blog.css
@@ -2,11 +2,6 @@
   box-sizing: border-box;
 }
 
-.section__news__item__link{
-  color: black;
-  text-decoration: none;
-}
-
 .link {
   color: black;
   text-decoration: none;
@@ -46,6 +41,11 @@
   }
 
 @media screen and (max-width: 768px) {
+
+  a{
+    text-decoration: none;
+  }
+
   .header__nav {
     display: none;
   }
@@ -172,12 +172,26 @@
 .blog {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .blog__item {
-  width: 31%;
+  width: 30%;
   margin-right: 20px;
   margin-top: 100px;
+}
+
+.blog__item__link{
+  text-decoration: none;
+}
+
+.blog__item:first-child{
+  margin: 0px 20px;
+  margin-top: 100px;
+}
+
+.blog__item:last-child{
+  margin-right: 0px;
 }
 
 img {
@@ -237,6 +251,11 @@ img {
 .fooetr-list {
   color: #fff;
   font-size: 12px;
+  text-decoration: none;
+}
+
+.fooetr-list:hover{
+  color: rgb(180, 180, 180);
 }
 
 .footer-nav-item:after {
