--- a/css/company.css
+++ b/css/company.css
@@ -70,6 +70,11 @@
   }
 
 @media screen and (max-width: 768px) {
+
+  a{
+    text-decoration: none;
+  }
+
   .header__nav {
     display: none;
   }
@@ -251,6 +256,11 @@
 .fooetr-list {
   color: #fff;
   font-size: 12px;
+  text-decoration: none;
+}
+
+.fooetr-list:hover{
+  color: rgb(180, 180, 180);
 }
 
 .footer-nav-item:after {
