--- a/css/recruit.css
+++ b/css/recruit.css
@@ -2,11 +2,6 @@
   box-sizing: border-box;
 }
 
-.section__news__item__link{
-  color: black;
-  text-decoration: none;
-}
-
 .link {
   color: black;
   text-decoration: none;
@@ -14,10 +9,6 @@
 
 .link:hover {
   color: rgb(99, 99, 99);
-}
-
-.section__menu-color-white {
-  color: #fff;
 }
 
 .btn {
@@ -49,6 +40,10 @@
   .header__nav {
     display: none;
   }
+
+  a{
+  text-decoration: none;
+}
 
   .menu {
     display: inline-block;
@@ -105,6 +100,7 @@
   .drawer-nav-list {
     padding-top: 80px;
     text-align: center;
+    display: grid;
   }
 
   .drawer-nav-item {
@@ -232,7 +228,7 @@ li {
 
 .recruit_list_item {
   border: 1px solid black;
-  padding: 15px 0;
+  padding: 15px;
 }
 
 .section__contact {
@@ -274,6 +270,7 @@ li {
 .fooetr-list {
   color: #fff;
   font-size: 12px;
+  text-decoration: none;
 }
 
 .footer-nav-item:after {
@@ -284,4 +281,8 @@ li {
 
 .footer-nav-item {
   padding: 0px 0px;
+}
+
+.fooetr-list:hover{
+  color: rgb(180, 180, 180);
 }
