--- a/css/index.css
+++ b/css/index.css
@@ -45,6 +45,15 @@
     display: none;
   }
 
+  @media screen and (min-width : 400px) {
+    .section__service__card__item{
+    width: 100%;
+    margin: 20px 5px 0px 5px;
+  }
+  .section__service{
+    width: 100%;
+  }}
+
 @media screen and (max-width: 768px) {
   .header__nav {
     display: none;
