--- a/css/index.css
+++ b/css/index.css
@@ -440,4 +440,18 @@ img {
   .section__service{
     width: 100%;
   }
+
+    .footer-copyright{
+    margin: 0px auto;
+  }
+
+  .footer-nav-item {
+    text-align: center;
+    margin-top: 10px;
+    width: 100%;
+  }
+
+  .footer-nav-item:after {
+  display: none;
+}
 }
