--- a/css/contact.css
+++ b/css/contact.css
@@ -45,96 +45,6 @@
     display: none;
   }
 
-@media screen and (max-width: 768px) {
-
-a{
-  text-decoration: none;
-}
-
-  .header__nav {
-    display: none;
-  }
-
-  .menu {
-    display: inline-block;
-    width: 36px;
-    height: 32px;
-    cursor: pointer;
-    position: relative;
-    z-index: 10;
-  }
-
-  .menu-line-bottom {
-    display: inline-block;
-    width: 100%;
-    height: 4px;
-    background-color: #000;
-    position: absolute;
-    transition: 0.5s;
-    bottom: 0;
-  }
-
-  .menu-line-top {
-    top: 0;
-    display: inline-block;
-    width: 100%;
-    height: 4px;
-    background-color: #000;
-    position: absolute;
-    transition: 0.5s;
-    bottom: 0;
-  }
-
-  .menu-line-middle {
-    top: 14px;
-    display: inline-block;
-    width: 100%;
-    height: 4px;
-    background-color: #000;
-    position: absolute;
-    transition: 0.5s;
-    bottom: 0;
-  }
-
-  .drawer-nav {
-    display: block;
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-    top: 0;
-    left: -100%;
-    background: white;
-    transition: 0.7s;
-  }
-
-  .drawer-nav-list {
-    padding-top: 80px;
-    text-align: center;
-  }
-
-  .drawer-nav-item {
-    margin-top: 40px;
-    color: #0033cc;
-    font-size: 18px;
-  }
-
-  .menu.open span:nth-of-type(1) {
-    top: 14px;
-    transform: rotate(45deg);
-  }
-  .menu.open span:nth-of-type(2) {
-    opacity: 0;
-  }
-  .menu.open span:nth-of-type(3) {
-    top: 14px;
-    transform: rotate(-45deg);
-  }
-
-  .in {
-    transform: translateX(100%);
-  }
-}
-
 .header {
   display: flex;
   justify-content: space-between;
@@ -274,4 +184,108 @@ a{
 
 .footer-nav-item {
   padding: 0px 0px;
+}
+
+@media screen and (max-width: 768px) {
+
+a{
+  text-decoration: none;
+}
+
+  .header__nav {
+    display: none;
+  }
+
+  .menu {
+    display: inline-block;
+    width: 36px;
+    height: 32px;
+    cursor: pointer;
+    position: relative;
+    z-index: 10;
+  }
+
+  .menu-line-bottom {
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    background-color: #000;
+    position: absolute;
+    transition: 0.5s;
+    bottom: 0;
+  }
+
+  .menu-line-top {
+    top: 0;
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    background-color: #000;
+    position: absolute;
+    transition: 0.5s;
+    bottom: 0;
+  }
+
+  .menu-line-middle {
+    top: 14px;
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    background-color: #000;
+    position: absolute;
+    transition: 0.5s;
+    bottom: 0;
+  }
+
+  .drawer-nav {
+    display: block;
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: -100%;
+    background: white;
+    transition: 0.7s;
+  }
+
+  .drawer-nav-list {
+    padding-top: 80px;
+    text-align: center;
+  }
+
+  .drawer-nav-item {
+    margin-top: 40px;
+    color: #0033cc;
+    font-size: 18px;
+  }
+
+  .menu.open span:nth-of-type(1) {
+    top: 14px;
+    transform: rotate(45deg);
+  }
+  .menu.open span:nth-of-type(2) {
+    opacity: 0;
+  }
+  .menu.open span:nth-of-type(3) {
+    top: 14px;
+    transform: rotate(-45deg);
+  }
+
+  .in {
+    transform: translateX(100%);
+  }
+
+    .footer-copyright{
+    margin: 0px auto;
+  }
+
+  .footer-nav-item {
+    text-align: center;
+    margin-top: 10px;
+    width: 100%;
+  }
+
+  .footer-nav-item:after {
+  display: none;
+}
 }
